// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elipsis renders with custom size 1`] = `
<React.Memo
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this 
    ...
  </WithStyles(Typography)>
</React.Memo>
`;

exports[`Elipsis renders with placement bottom 1`] = `
<React.Memo
  interactive={false}
  placement="bottom"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this 
    ...
  </WithStyles(Typography)>
</React.Memo>
`;

exports[`Elipsis renders with placement bottom-end 1`] = `
<React.Memo
  interactive={false}
  placement="bottom-end"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this 
    ...
  </WithStyles(Typography)>
</React.Memo>
`;

exports[`Elipsis renders with placement bottom-start 1`] = `
<React.Memo
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this 
    ...
  </WithStyles(Typography)>
</React.Memo>
`;
